commmitng new changes

--- a/gitActions.html
+++ b/gitActions.html
@@ -1,3 +1,5 @@
 <h1>git actions are performing here </h1>
 <p>this my feature 1 branch</p>
 <button>click here mam</button>
+<p>we are adding this in feature1</p>
+<b>hemalaatha reddy burugupally </b>
